Fix footer gap from bottom of window

--- a/projects/marketing/src/app/app.component.scss
+++ b/projects/marketing/src/app/app.component.scss
@@ -50,13 +50,14 @@ footer {
   // This pushes it to the bottom when not enough content is on the page
   margin-top: auto;
   margin-bottom: -5px;
-  padding-top: 30px;
+  padding: 30px 0;
   color: white;
 
   .big-card-wrapper {
     display: flex;
     align-items: center;
     margin-top: 0;
+    margin-bottom: 0;
     min-height: 0;
     > div:not(:last-child) {
       margin-right: 25px;
